build: compatibilizando para JDK 8